Fix overflow for ".body" area

--- a/front/styles.less
+++ b/front/styles.less
@@ -131,7 +131,7 @@ body {
         bottom: 0;
         left: @SidebarW;
         padding-right: 0.5em;
-        overflow-y: auto;
+        overflow: auto;
         -webkit-overflow-scrolling: touch;
         .title {
             font-weight: bold;
